按sonar提示修正问题